# tox-ci-cd

./: .coveragerc  .gitignore  .gitreview  .testr.conf  README.md  README.rst  setup.cfg  test-requirements.txt  tox.ini
eagle/: adder.py  average.py
eagle/tests/: test_add.py  test_random.py
